# QTEdgeWebView

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qmlwebview2.cpp  qmlwebview2.h
VSProject/: WebView2Library.sln
VSProject/WebView2Library/: EdgeWebView2.cpp  EdgeWebView2.h  WebView2Library.vcxproj  WebView2Library.vcxproj.filters
VSProject/WebViewCli/: WebViewCli.vcxproj  main.cpp
